Fix for overflow bug

--- a/drupal/web/themes/custom/konsolifin2026/css/base/reset.css
+++ b/drupal/web/themes/custom/konsolifin2026/css/base/reset.css
@@ -10,6 +10,7 @@ html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
